tests/src/Loader/classloader/generics/Instantiation/Negative/abstract07.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    class _generics_Instantiation_Negative_abstract07_abstract07_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_abstract07_abstract07_cmd()
        {
            int rv = CoreClrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\abstract07\\abstract07.cmd");
            Assert.Equal(rv, CoreClrTestWrapperLib.EXIT_SUCCESS_CODE);
        }
    }
}
